# fann

./: .gitignore  CMakeLists.txt  NEWS  autogen.sh  configure.in  fann2.kdevelop  fann2.kdevelop.filelist  mkinstalldirs
Borland Developer Studio/CVS/: Entries  Repository  Root
BorlandC++Builder6.0/CVS/: Entries  Repository
CVS/: Entries
CodeGear RAD Studio/: cascade_train.cbproj  fann.groupproj  floatfann.cbproj  xor_train.cbproj  xor_train_mimo.cbproj
CodeGear RAD Studio/CVS/: Entries  Repository
Delphi/CVS/: Entries  Repository
GUI/CVS/: Repository
GUI/OO.org/: readme.txt
GUI/nativeGui/: CMakeLists.txt  README  nativeGui.kdevelop
GUI/nativeGui/CVS/: Entries  Repository
GUI/nativeGui/src/: CMakeLists.txt  src.pro
GUI/nativeGui/src/CVS/: Entries  Repository
GUI/nativeGui/src/annGraphWidget/: CMakeLists.txt  annGraphWidget.pro  anngraphwidget.cpp  anngraphwidget.h  connection.cpp  connection.h  defaultlayeritem.cpp  defaultlayeritem.h  inputlayeritem.cpp  inputlayeritem.h  layeritem.cpp  layeritem.h  mimoneuronitem.cpp  mimoneuronitem.h  node.cpp  node.h
GUI/nativeGui/src/annGraphWidget/CVS/: Entries  Repository  Tag
GUI/nativeGui/src/dataStructure/: CMakeLists.txt  batchsigmoidoptimizedneuron.cpp  batchsigmoidoptimizedneuron.h  batchsigmoidsymmetricoptimizedneuron.cpp  batchsigmoidsymmetricoptimizedneuron.h  dataStructure.pro  definitions.h  layer.cpp  layer.h  layerdescriptor.cpp  layerdescriptor.h  network.cpp  network.h  networkdescriptor.cpp  networkdescriptor.h  neuron.cpp  neuron.h  neurondescriptor.cpp  neurondescriptor.h  rpropsigmoidoptimizedneuron.cpp  rpropsigmoidoptimizedneuron.h  rpropsigmoidsymmetricoptimizedneuron.cpp  rpropsigmoidsymmetricoptimizedneuron.h  traindata.cpp  traindata.h  trainingparameters.cpp  trainingparameters.h
GUI/nativeGui/src/dataStructure/CVS/: Entries  Repository
GUI/nativeGui/src/nativeGui/: CMakeLists.txt  buffervector.h  dataplot.cpp  dataplot.h  designtoolbar.cpp  designtoolbar.h  icons.qrc  inputdatagroup.cpp  inputdatagroup.h  main.cpp  main_window.ui  mainstackedwidget.cpp  mainstackedwidget.h  mainwindow.cpp  mainwindow.h  nativeGui.pro  networkmanager.cpp  networkmanager.h  neuronproperty_widget.ui  neuronpropertywidget.cpp  neuronpropertywidget.h  outputproperty_widget.ui  outputpropertywidget.cpp  outputpropertywidget.h  test_widget.ui  testwidget.cpp  testwidget.h  train_widget.ui  trainproperty_widget.ui  trainpropertywidget.cpp  trainpropertywidget.h  trainwidget.cpp  trainwidget.h
GUI/nativeGui/src/nativeGui/CVS/: Entries  Repository
GUI/nativeGui/src/nativeGui/images/16x16/CVS/: Entries  Repository
GUI/nativeGui/src/nativeGui/images/32x32/CVS/: Entries  Repository
GUI/nativeGui/src/nativeGui/images/CVS/: Repository
GUI/nativeGui/src/qwt-5.0.2/: qwt-5.0.2.pro
GUI/nativeGui/src/qwt-5.0.2/CVS/: Entries  Repository
MicrosoftVisualC++.Net/: cunit_tests.vcproj  libfann.vcproj  simple_test.vcproj  simple_train.vcproj  steepness_train.vcproj  xor_float.net  xor_test.vcproj  xor_train.vcproj
MicrosoftVisualC++.Net/CVS/: Entries  Repository
PlayerStagePlugin/: README  configure.ac
PlayerStagePlugin/examples/libplayerc/: Makefile.am  fann_ann_test.c  fann_ann_test.cfg  fann_som_test.c  fann_som_test.cfg  fann_test.c  fann_test.world  pioneer.inc
PlayerStagePlugin/examples/libplayerc/CVS/: Entries  Repository
PlayerStagePlugin/examples/plugins/fanndriver/: Makefile.am  fann_driver_commands.h  fanndriver.cc  fanndriver.cfg  fd.cc  sharedstruct.h
PlayerStagePlugin/examples/plugins/fanndriver/CVS/: Entries  Repository
benchmarks/: benchmark.sh  benchmark_gng.sh  benchmark_som.sh  gnuplot.pl  gnuplot_gng.pl  gnuplot_som.pl  performance.cc  quality.cc  quality_gng.c  quality_som.c
benchmarks/CVS/: Entries  (+1 more)
doc/: fann.xml  gpu.txt  recurrent_intro.txt  recurrent_readme.txt  som_gng.txt
examples/: Makefile  hopfield_test2.data  hopfield_test3.data  mat_vect_mult_compare.c  recurrent_basic_test.c  recurrent_hopfield_test.c  recurrent_rtrl_test.c  recurrent_unrolled_test.c  regression.c  simple_train_gng.c  simple_train_som.c  toy_test.c  xor_test.c  xor_train.c  xor_train_mimo.c
src/: CMakeLists.txt  Makefile.am  fann.c  fann_base.c  fann_generic.c  fann_io.c  fann_recurrent.c  fann_sparse.c  fann_train.c  fann_train_data.c  floatfann.c
src/CVS/: Entries  Repository
src/gpu/: fann_gpu.h  fann_gpu_bench.c  fann_gpu_example.c
src/gpu/CVS/: Entries  Repository
src/gpu/shaders/: sigmoid_sum.fp  sigmoid_sum_masked.fp  sum.fp
src/gpu/shaders/CVS/: Entries  Repository
src/include/: CMakeLists.txt  Makefile.am  config.h  fann.h
src/include/CVS/: Entries  Repository
src/include/optimized/: CMakeLists.txt  fann_optimized_template.h  fann_train_optimized_template.h
src/include/optimized/CVS/: Entries  Repository
src/include/optimized/blas/: CMakeLists.txt  fann.h  fann_batch.h  fann_rprop.h
src/include/optimized/blas/CVS/: Entries  Repository
src/include/optimized/scalar/: CMakeLists.txt  fann.h  fann_batch.h  fann_rprop.h
src/include/optimized/scalar/CVS/: Entries  Repository
src/include/optimized/sse/: CMakeLists.txt  fann.h  fann_batch.h  fann_rprop.h
src/include/optimized/sse/CVS/: Entries  Repository
src/optimized/: CMakeLists.txt  Makefile.am
src/optimized/CVS/: Entries  Repository
src/optimized/blas/: CMakeLists.txt  Makefile.am  fann.c  fann_base.c  fann_blas_mimo.c  fann_blas_mimo_batch.c  fann_blas_mimo_rprop.c
src/optimized/blas/CVS/: Entries  Repository
src/optimized/scalar/: CMakeLists.txt  Makefile.am  fann.c  fann_scalar_mimo.c  fann_scalar_mimo_batch.c  fann_scalar_mimo_rprop.c
src/optimized/scalar/CVS/: Entries  Repository
src/optimized/sse/: CMakeLists.txt  Makefile.am  fann.c  fann_base.c  fann_sse_mimo.c  fann_sse_mimo_batch.c  fann_sse_mimo_rprop.c
src/optimized/sse/CVS/: Entries  Repository
tests/: cunit_fann.h  cunit_gng.c  cunit_runtests.c  cunit_simple_test.c  cunit_simple_train.c  cunit_som_hex.c  cunit_som_rec.c  cunit_steepness_train.c  cunit_unrolled_recurrent.c  cunit_xor_test.c  cunit_xor_train.c  som_train.data
(+103 files in other folders)
