PROJECT (FANNGUI)
#SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(FANN_TOP_DIR
	${CMAKE_SOURCE_DIR}/../..
)

SET(CMAKE_MODULE_PATH
	${FANN_TOP_DIR}/cmake/Modules 
)

SET( FANN_PREFIX_DIR /usr/ CACHE PATH "FANN install dirrectory" )

INCLUDE(DefineInstallationPaths)

FIND_PACKAGE(Qt4 REQUIRED)

ADD_DEFINITIONS(${QT_DEFINITIONS})

LINK_DIRECTORIES(${QT_LIBRARY_DIR})

INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_INCLUDE_DIR} ${QT_QTCORE_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${FANN_PREFIX_DIR}/include )
SET(VERSION 2.1.99)



ADD_SUBDIRECTORY( src ) 

