#SUBDIRS = optimized
fannincdir = $(includedir)/fann
nobase_fanninc_HEADERS = fann.h doublefann.h fann_internal.h floatfann.h fann_data.h \
	fixedfann.h compat_time.h fann_activation.h fann_cascade.h fann_error.h fann_train.h fann_io.h fann_cpp.h \
	fann_generic.h fann_sparse.h fann_som.h fann_gng.h \
	optimized/fann_optimized_template.h optimized/fann_train_optimized_template.h \
	optimized/scalar/fann.h optimized/scalar/fann_batch.h optimized/scalar/fann_rprop.h \
	optimized/sse/fann.h optimized/sse/fann_batch.h optimized/sse/fann_rprop.h \
	optimized/blas/fann.h optimized/blas/fann_batch.h optimized/blas/fann_rprop.h \
	fann_recurrent.h
